update flex classes

--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -11,7 +11,7 @@
 <div class="itemBox JS_appNavBox">
   {% for group in site.data.app-nav-tab1.groups %}
     <ul class="itemBox__row itemBox__row--item">
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_toggle">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">{{group.icon}}</div>
         </div>
