--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -3,27 +3,27 @@
 <div class="itemBox">
 
   <ul class="itemBox__row itemBox__row--h1">
-    <li class="itemBox__cell itemBox__cell--flex1">
+    <li class="itemBox__cell flex-grow-1">
       <div class="itemBox__cellInner">
         <h2 class="font--h2 ellipsis">Lorem ipsum dolor sit amet</h2>
       </div>
     </li>
-    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+    <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
       <div class="itemBox__cellInner">
         <div class="itemBox__action itemBox__action--disabled" title="refresh">ހ</div>
       </div>
     </li>
-    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+    <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
       <div class="itemBox__cellInner">
         <div class="itemBox__action" title="add">ނ</div>
       </div>
     </li>
-    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+    <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
       <div class="itemBox__cellInner">
         <div class="itemBox__action" title="link">ރ</div>
       </div>
     </li>
-    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker">
+    <li class="itemBox__cell flex-grow-0 itemBox__cell--action MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker">
       <div class="itemBox__cellInner">
         <div class="itemBox__action" title="arrange columns">ށ</div>
       </div>
@@ -31,7 +31,7 @@
   </ul>
 
   <ul class="itemBox__row itemBox__row--h2">
-    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_expand">
+    <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
       <div class="itemBox__cellInner">
         <div class="itemBox__action">ऄ</div>
       </div>
@@ -42,17 +42,17 @@
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">Performed For</div>
     </li>
-    <li class="itemBox__cell itemBox__cell--flex0">
+    <li class="itemBox__cell flex-grow-0">
       <div class="itemBox__cellInner">
       </div>
     </li>
-    <li class="itemBox__cell itemBox__cell--flex3">
+    <li class="itemBox__cell flex-grow-3">
       <div class="itemBox__cellInner">Assigned to</div>
     </li>
   </ul>
 
   <ul class="itemBox__row itemBox__row--item">
-    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+    <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
       <div class="itemBox__cellInner"></div>
     </li>
     <li class="itemBox__cell itemBox__cell--permalink">
@@ -63,12 +63,12 @@
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">34342-34252345-342543523-343213124</div>
     </li>
-    <li class="itemBox__cell itemBox__cell--flex0">
+    <li class="itemBox__cell flex-grow-0">
       <div class="itemBox__cellInner animate--popup">
         <div class="itemBox__action itemBox__action--secondary">܌</div>
       </div>
     </li>
-    <li class="itemBox__cell itemBox__cell--flex3">
+    <li class="itemBox__cell flex-grow-3">
       <div class="itemBox__cellInner">
 
         <div class="selector selector--expanded">
@@ -84,7 +84,7 @@
   </ul>
 
   <ul class="itemBox__row itemBox__row--item">
-    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_expand">
+    <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
       <div class="itemBox__cellInner">
         <div class="itemBox__action">ऄ</div>
       </div>
@@ -95,11 +95,11 @@
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">34342-34252345-342543523-343213124</div>
     </li>
-    <li class="itemBox__cell itemBox__cell--flex0">
+    <li class="itemBox__cell flex-grow-0">
       <div class="itemBox__cellInner">
       </div>
     </li>
-    <li class="itemBox__cell itemBox__cell--flex3">
+    <li class="itemBox__cell flex-grow-3">
       <div class="itemBox__cellInner animate--loading">
 
         <div class="selector selector--expanded">
@@ -121,22 +121,22 @@
           <h2 class="font--h2 ellipsis">Contruction Reports</h2>
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
         <div class="itemBox__cellInner">
           <div class="itemBox__action itemBox__action--disabled">ހ</div>
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ނ</div>
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ރ</div>
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ށ</div>
         </div>
@@ -144,7 +144,7 @@
     </ul>
 
     <ul class="itemBox__row itemBox__row--h2">
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_expand">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ</div>
         </div>
@@ -155,13 +155,13 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">Performed For</div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex3">
+      <li class="itemBox__cell flex-grow-3">
         <div class="itemBox__cellInner">Assigned to</div>
       </li>
     </ul>
 
     <ul class="itemBox__row itemBox__row--item">
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
         <div class="itemBox__cellInner"></div>
       </li>
       <li class="itemBox__cell">
@@ -170,7 +170,7 @@
       <li class="itemBox__cell itemBox__cell--focus">
         <div class="itemBox__cellInner">lorem ipsum dolor sit amet</div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex3">
+      <li class="itemBox__cell flex-grow-3">
         <div class="itemBox__cellInner">
 
           <div class="selector selector--expanded selector--multiselect JS_selector">
@@ -209,7 +209,7 @@
     {% include blocks/itembox-row.html %}
     {% for i in (1..2) %}
       <ul class="itemBox__row itemBox__row--item animate--loading">
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_expand">
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">ऄ</div>
           </div>
@@ -220,7 +220,7 @@
         <li class="itemBox__cell">
           <div class="itemBox__cellInner">lorem ipsum dolor sit amet</div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex3">
+        <li class="itemBox__cell flex-grow-3">
           <div class="itemBox__cellInner">
 
             <div class="selector selector--expanded selector--multiselect JS_selector">
@@ -271,22 +271,22 @@
             <h2 class="font--h2 ellipsis">Contruction Reports</h2>
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
           <div class="itemBox__cellInner">
             <div class="itemBox__action itemBox__action--disabled">ހ</div>
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">ނ</div>
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">ރ</div>
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker">
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">ށ</div>
           </div>
@@ -294,7 +294,7 @@
       </ul>
 
       <ul class="itemBox__row itemBox__row--h2">
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_expand">
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">ऄ</div>
           </div>
@@ -305,7 +305,7 @@
         <li class="itemBox__cell">
           <div class="itemBox__cellInner">Placeholder</div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex3">
+        <li class="itemBox__cell flex-grow-3">
           <div class="itemBox__cellInner">A focused cell</div>
         </li>
       </ul>
