--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -9,7 +9,7 @@
 
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ञ</div>
         </div>
