--- a/_includes/blocks/itembox-row.html
+++ b/_includes/blocks/itembox-row.html
@@ -1,5 +1,5 @@
 <ul class="itemBox__row itemBox__row--item">
-  <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+  <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
     <div class="itemBox__cellInner"></div>
   </li>
   <li class="itemBox__cell">
@@ -8,7 +8,7 @@
   <li class="itemBox__cell">
     <div class="itemBox__cellInner">lorem ipsum dolor sit amet</div>
   </li>
-  <li class="itemBox__cell itemBox__cell--flex3">
+  <li class="itemBox__cell flex-grow-3">
     <div class="itemBox__cellInner">34342-34252345-342543523-343213124</div>
   </li>
 </ul>
