--- a/_includes/blocks/popup/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/popup/ms-tags-colors-suggestions.html
@@ -15,12 +15,12 @@
 
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle JS_itemBox__cell--draggable">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action ui-sortable-handle JS_itemBox__cell--draggable">
         <div class="itemBox__cellInner">
           <div class="itemBox__action itemBox__action--hidden">އ</div>
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove">
         <div class="itemBox__cellInner">
           <div class="itemBox__action JS_itemBoxTable__action--remove">—</div>
         </div>
