--- a/_includes/javascript/addGroupAction.html
+++ b/_includes/javascript/addGroupAction.html
@@ -1,4 +1,4 @@
-<li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll JS_itemBox__action">
+<li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll JS_itemBox__action">
   <div class="itemBox__cellInner">
     <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll">ބ</div>
   </div>
