--- a/_includes/javascript/itemSelected.html
+++ b/_includes/javascript/itemSelected.html
@@ -1,4 +1,4 @@
-<li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_showSelected">
+<li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_showSelected">
   <div class="itemBox__cellInner">
     <div class="itemBox__action itemBox__action--disabled"></div>
   </div>
