--- a/_includes/javascript/selectedBlock.html
+++ b/_includes/javascript/selectedBlock.html
@@ -5,7 +5,7 @@
       </div>
     </li>
     ${andOrSelector}
-    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
+    <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove">
       <div class="itemBox__cellInner">
         <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
       </div>
