--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -22,7 +22,7 @@
           {% include javascript/and-or-selector.html %}
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
           <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
         </div>
@@ -42,7 +42,7 @@
               {% include javascript/and-or-selector.html %}
             </div>
           </li>
-          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+          <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
             <div class="itemBox__cellInner">
               <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
             </div>
@@ -67,7 +67,7 @@
                   </div>
                 </div>
               </li>
-              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+              <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
                 <div class="itemBox__cellInner">
                   <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
                 </div>
@@ -90,7 +90,7 @@
                   </div>
                 </div>
               </li>
-              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+              <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
                 <div class="itemBox__cellInner">
                   <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
                 </div>
@@ -110,7 +110,7 @@
               {% include javascript/and-or-selector.html %}
             </div>
           </li>
-          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+          <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
             <div class="itemBox__cellInner">
               <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
             </div>
@@ -135,7 +135,7 @@
                   </div>
                 </div>
               </li>
-              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+              <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
                 <div class="itemBox__cellInner">
                   <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
                 </div>
@@ -158,7 +158,7 @@
                   </div>
                 </div>
               </li>
-              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+              <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
                 <div class="itemBox__cellInner">
                   <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
                 </div>
@@ -176,7 +176,7 @@
           <div class="itemBox__action">अ All</div>
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
           <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
         </div>
@@ -190,7 +190,7 @@
             <div class="itemBox__action">अ Smart Dates</div>
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
           <div class="itemBox__cellInner">
             <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
           </div>
@@ -215,7 +215,7 @@
               </div>
             </div>
           </li>
-          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+          <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
             <div class="itemBox__cellInner">
               <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
             </div>
@@ -231,7 +231,7 @@
             <div class="itemBox__action">अ Simple Dates</div>
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
           <div class="itemBox__cellInner">
             <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
           </div>
@@ -256,7 +256,7 @@
               </div>
             </div>
           </li>
-          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+          <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
             <div class="itemBox__cellInner">
               <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
             </div>
@@ -273,7 +273,7 @@
             <div class="itemBox__action">अ Ranges</div>
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
           <div class="itemBox__cellInner">
             <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
           </div>
@@ -298,7 +298,7 @@
               </div>
             </div>
           </li>
-          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+          <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
             <div class="itemBox__cellInner">
               <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
             </div>
@@ -314,7 +314,7 @@
             <div class="itemBox__action">अ Next/Last</div>
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
           <div class="itemBox__cellInner">
             <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
           </div>
@@ -339,7 +339,7 @@
               </div>
             </div>
           </li>
-          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+          <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
             <div class="itemBox__cellInner">
               <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
             </div>
