--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -17,7 +17,7 @@
           <div class="itemBox__action">ऄ Selected</div>
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
           <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
         </div>
@@ -33,12 +33,12 @@
                 <div class="itemBox__value">{{selected}}</div>
               </div>
             </li>
-            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--draggable">
+            <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--draggable">
               <div class="itemBox__cellInner">
                 <div class="itemBox__action itemBox__action--hidden">އ</div>
               </div>
             </li>
-            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action  JS_itemBox__cell--remove JS_itemBox__action">
+            <li class="itemBox__cell flex-grow-0 itemBox__cell--action  JS_itemBox__cell--remove JS_itemBox__action">
               <div class="itemBox__cellInner itemBox__cellInner--action">
                 <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
               </div>
@@ -54,12 +54,12 @@
           <div class="itemBox__action">ऄ All</div>
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
           <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll JS_itemBox__action">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll JS_itemBox__action">
         <div class="itemBox__cellInner">
           <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll">ބ</div>
         </div>
@@ -75,14 +75,14 @@
             </div>
           </li>
           {% if group.noneSelected == "false" %}
-            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+            <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
               <div class="itemBox__cellInner">
                 <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
               </div>
             </li>
           {% endif %}
           {% if group.allSelected == "false" %}
-            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll JS_itemBox__action">
+            <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll JS_itemBox__action">
               <div class="itemBox__cellInner">
                 <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll">ބ</div>
               </div>
@@ -99,13 +99,13 @@
                 </div>
               </li>
               {% if item.selected == "true" %}
-                <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
+                <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
                   <div class="itemBox__cellInner">
                     <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
                   </div>
                 </li>
               {% else %}
-                <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__action">
+                <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__action">
                   <div class="itemBox__cellInner">
                     <div class="itemBox__action JS_itemBox__action--add">ބ</div>
                   </div>
