update hover/active effects

--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -1,4 +1,4 @@
-<div class="multiSelector multiSelector--popup JS_multiSelector--withFilter" id="filter-datepicker">
+<div class="multiSelector JS_multiSelector--withFilter" id="filter-datepicker">
 
   <div class="itemBox">
     <ul class="itemBox__row">
