--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -1,4 +1,4 @@
-<div class="multiSelector multiSelector--popup JS_multiSelector--withFilter" id="new-multiselect" style="width: 50%;">
+<div class="multiSelector JS_multiSelector--withFilter" id="new-multiselect" style="width: 50%;">
 
   <div class="itemBox">
     <ul class="itemBox__row">
