--- a/_includes/blocks/breadcrumbs.html
+++ b/_includes/blocks/breadcrumbs.html
@@ -5,11 +5,11 @@
       <div class="selector">
         <div class="selector__item selector__item--selected">
           <div class="selector__block">
-            <div class="selector__blockPart selector__blockPart--label MULTISELECT__POPUP JS_breadcrumbPopup" data-popid="#multiSelector-breadcrumb">{{item.label}}</div>
+            <div class="selector__blockPart selector__blockPart--label JS_has-popup JS_breadcrumbPopup" data-popid="#multiSelector-breadcrumb">{{item.label}}</div>
           </div>
         </div>
       </div>
-      
+
       <div class="link">
         <a href="#">{{item.name}}</a>
       </div>
