--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -35,15 +35,8 @@
     .selector__item,
     .selector__item:hover {
       cursor: text;
-      filter: saturate(1) opacity(1);
-    }
-
-    .selector {
-      &__item {
-        &:active {
-          opacity: 1;
-        }
-      }
+      filter: saturate(1);
+      opacity: 1;
     }
   }
 
@@ -51,11 +44,25 @@
     .selector__item {
       &:hover {
         transform: translateY(1px);
+        opacity: .7;
+
+        &:active {
+          opacity: .45;
+        }
       }
 
       &--selected {
         &:hover {
           transform: none;
+          opacity: 1;
+
+          &:active {
+            opacity: 1;
+          }
+        }
+
+        &:active {
+          opacity: 1;
         }
       }
     }
@@ -64,7 +71,7 @@
   &--multiselect {
     .selector__item {
       overflow: visible;
-      border-radius: 3px;
+      border-radius: 4px;
 
       &:first-child {
         border-top-left-radius: 15px;
@@ -74,6 +81,15 @@
       &:last-child {
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
+      }
+
+      &:hover {
+        transform: translateY(1px);
+        opacity: .7;
+
+        &:active {
+          opacity: .45;
+        }
       }
     }
   }
@@ -90,20 +106,14 @@
     border-radius: 15px;
     background-color: #FFF;
     transition: all .3s ease-in-out;
-    filter: saturate(.4) opacity(.4);
+    filter: saturate(.4);
+    opacity: .4;
     cursor: pointer;
-
-    &:active {
-      opacity: .45;
-    }
 
     &--selected {
       box-shadow: 0 2px 8px -2px rgba(0,0,0,.7);
-      filter: saturate(1) opacity(1);
-
-      &:active {
-        opacity: 1;
-      }
+      filter: saturate(1);
+      opacity: 1;
     }
 
     &:first-child {
@@ -158,7 +168,6 @@
     position: relative;
     display: inline-block;
     height: 26px;
-    border-radius: 3px;
     font-size: 0;
 
     &Seperator {
@@ -185,7 +194,6 @@
       white-space: nowrap;
       text-overflow: ellipsis;
       font-size: 16px;
-      backface-visibility: hidden;
 
       &--prefix {
         text-align: center;
