fix font family

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -2,7 +2,7 @@
 ---
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Source Sans Pro', 'tenforce', Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Source Sans Pro', 'tenforce', Arial, sans-serif;
   font-kerning: normal;
   -webkit-font-variant-ligatures: no-common-ligatures;
   font-variant-ligatures: no-common-ligatures;
