--- a/sass/framework.scss
+++ b/sass/framework.scss
@@ -226,8 +226,7 @@
       width: 100%;
       height: 100%;
       background-size: 80px 80px;
-      background-image:
-        linear-gradient(
+      background-image: linear-gradient(
         135deg,
         rgba(200,200,200,0.5) 0%,
         rgba(200,200,200,0.5) 20%,
@@ -236,6 +235,16 @@
         rgba(200,200,200,0.5) 70%,
         transparent 90%,
         rgba(200,200,200,0.5) 100%
+      );
+      background-image: linear-gradient(
+        135deg,
+        rgba(0,0,0,.1) 0%,
+        rgba(0,0,0,.1) 20%,
+        transparent 40%,
+        rgba(0,0,0,.1) 50%,
+        rgba(0,0,0,.1) 70%,
+        transparent 90%,
+        rgba(0,0,0,.1) 100%
       );
       -webkit-animation: animate-loading 3s linear infinite;
       -moz-animation: animate-loading 3s linear infinite;
