--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -57,8 +57,8 @@
                   <div class="itemBox__value">
 
                     <div class="selector selector--readonly">
-                      <div class="selector__item selector__item--selected">
-                        <div class="selector__block ">
+                      <div class="selector__item">
+                        <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
                         </div>
                       </div>
@@ -81,7 +81,7 @@
 
                     <div class="selector selector--readonly">
                       <div class="selector__item selector__item--selected">
-                        <div class="selector__block ">
+                        <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">19/03/18-20/03/18</div>
                         </div>
                       </div>
@@ -126,7 +126,7 @@
 
                     <div class="selector selector--readonly">
                       <div class="selector__item selector__item--selected">
-                        <div class="selector__block ">
+                        <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">today</div>
                         </div>
                       </div>
@@ -149,7 +149,7 @@
 
                     <div class="selector selector--readonly">
                       <div class="selector__item selector__item--selected">
-                        <div class="selector__block ">
+                        <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">18/04/18</div>
                         </div>
                       </div>
@@ -206,7 +206,7 @@
                 {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
                 <div class="selector">
                   <div class="selector__item selector__item--selected">
-                    <div class="selector__block ">
+                    <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--field JS_text">today</div>
                     </div>
                   </div>
@@ -247,7 +247,7 @@
                 {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
                 <div class="selector  JS_toggle--calendar">
                   <div class="selector__item selector__item--selected">
-                    <div class="selector__block ">
+                    <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--field JS_text">18/04/18</div>
                     </div>
                   </div>
@@ -289,7 +289,7 @@
                 {% include blocks/popup/include-exclude-selector.html selected="include"%}
                 <div class="selector">
                   <div class="selector__item selector__item--selected">
-                    <div class="selector__block ">
+                    <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--field JS_text">19/03/18-20/03/18</div>
                     </div>
                   </div>
@@ -330,7 +330,7 @@
                 {% include blocks/popup/include-exclude-selector.html selected="include"%}
                 <div class="selector">
                   <div class="selector__item selector__item--selected">
-                    <div class="selector__block ">
+                    <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
                     </div>
                   </div>
