--- a/_includes/javascript/and-or-selector.html
+++ b/_includes/javascript/and-or-selector.html
@@ -1,4 +1,4 @@
-  <div class="selector selector--expanded JS_selector">
+  <div class="selector selector--singleselect selector--expanded JS_selector">
     <div class="selector__item JS_selectorItem selector__item--selected">
       <div class="selector__block">
         <div class="selector__blockPart selector__blockPart--label">Or</div>
