--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -4,7 +4,7 @@
 .field {
   position: relative;
   min-height: 80px;
-  padding: 15px;
+  padding: 15px 10px;
   border: 1px solid transparent;
   transition: all .3s ease-in-out;
 
@@ -22,7 +22,7 @@
     box-shadow: 0 0 200px rgba(0,0,0,.1);
 
     .field__label {
-      top: 2px;
+      top: 5px;
 
       font-size: 12px;
       font-weight: 600;
@@ -37,9 +37,23 @@
     }
   }
 
+  &__focus-trigger {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0);
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    padding: 32px 10px 16px 10px;
+    outline: 0;
+    opacity: 0;
+  }
+
   &__label {
     position: relative;
-    top: 2px;
+    top: 5px;
+    padding: 0 5px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -64,12 +78,10 @@
 
   &__value {
     position: relative;
-    font-size: 16px;
-    line-height: 40px;
-    margin: -5px -1px;
+    z-index: 1;
     white-space: nowrap;
     overflow: hidden;
-    min-height: 38px;
+    padding: 5px;
 
     &::after {
       content: '';
@@ -83,23 +95,5 @@
       pointer-events: none;
       z-index: 2;
     }
-
-    .selector {
-      margin: 5px 0;
-      z-index: 2;
-    }
-  }
-
-  &__input {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(255, 255, 255, 0);
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    outline: 0;
-    padding: 0 2px;
-    max-width: 300px;
   }
 }
