Coluimnpicker: applied JS_has-popup instead of MULTISELECT__POPUP

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -23,7 +23,7 @@
         <div class="itemBox__action" title="link">ރ</div>
       </div>
     </li>
-    <li class="itemBox__cell flex-grow-0 itemBox__cell--action MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker">
+    <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_has-popup" data-popid="#multiSelector-columnpicker">
       <div class="itemBox__cellInner">
         <div class="itemBox__action" title="arrange columns">ށ</div>
       </div>
@@ -136,7 +136,7 @@
           <div class="itemBox__action">ރ</div>
         </div>
       </li>
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_has-popup" data-popid="#multiSelector-columnpicker">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ށ</div>
         </div>
@@ -286,7 +286,7 @@
             <div class="itemBox__action">ރ</div>
           </div>
         </li>
-        <li class="itemBox__cell flex-grow-0 itemBox__cell--action MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker">
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_has-popup" data-popid="#multiSelector-columnpicker">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">ށ</div>
           </div>
