update user menu

--- a/_includes/blocks/user-menu.html
+++ b/_includes/blocks/user-menu.html
@@ -14,7 +14,12 @@
       <ul class="itemBox__row itemBox__row--item">
         <li class="itemBox__cell itemBox__cell--permalink">
           <div class="itemBox__cellInner">
-            <div class="itemBox__value">{{item.icon}} {{item.name}}</div>
+            <div class="itemBox__value">{{item.icon}}</div>
+          </div>
+        </li>
+        <li class="itemBox__cell itemBox__cell--permalink">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__value">{{item.name}}</div>
           </div>
         </li>
       </ul>
