update user menu

--- a/_includes/blocks/user-menu.html
+++ b/_includes/blocks/user-menu.html
@@ -12,7 +12,7 @@
     <div class="itemBox">
       {% for item in itemgroup %}
       <ul class="itemBox__row itemBox__row--item">
-        <li class="itemBox__cell itemBox__cell--permalink">
+        <li class="itemBox__cell flex-grow-0">
           <div class="itemBox__cellInner">
             <div class="itemBox__value">{{item.icon}}</div>
           </div>
