--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
 <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="format-detection" content="telephone=no">
 
 <title>{{ page.title }}</title>
 
